# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-11-15 04:47:25 GMT	John Goerzen <jgoerzen@complete.org>	patch-51

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-51


    modified files:
     ChangeLog libsrc/MissingH/Printf/Types.hs


2004-11-15 03:49:20 GMT	John Goerzen <jgoerzen@complete.org>	patch-50

    Summary:
      Checkpointing printf
    Revision:
      missingh--head--0.5--patch-50


    modified files:
     ChangeLog Makefile libsrc/MissingH/Printf.hs
     libsrc/MissingH/Printf/Types.hs testsrc/Printftest.hs

    renamed files:
     libsrc/MissingH/Printf/Types.lhs
       ==> libsrc/MissingH/Printf/Types.hs


2004-11-15 03:23:15 GMT	John Goerzen <jgoerzen@complete.org>	patch-49

    Summary:
      Another test case
    Revision:
      missingh--head--0.5--patch-49


    modified files:
     ChangeLog


2004-11-15 03:22:42 GMT	John Goerzen <jgoerzen@complete.org>	patch-48

    Summary:
      Fixed precision handling
    Revision:
      missingh--head--0.5--patch-48


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs
     libsrc/MissingH/Printf/Printer.lhs
     libsrc/MissingH/Printf/Types.lhs


2004-11-15 03:18:46 GMT	John Goerzen <jgoerzen@complete.org>	patch-47

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-47


    modified files:
     ChangeLog testsrc/Printftest.hs


2004-11-15 03:07:28 GMT	John Goerzen <jgoerzen@complete.org>	patch-46

    Summary:
      Width working
    Revision:
      missingh--head--0.5--patch-46


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs
     libsrc/MissingH/Printf/Printer.lhs


2004-11-15 03:04:36 GMT	John Goerzen <jgoerzen@complete.org>	patch-45

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-45


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs

